fix: adjust spacing

--- a/back/public/stylesheets/app.css
+++ b/back/public/stylesheets/app.css
@@ -220,6 +220,8 @@ li > div {
   justify-content: center;
   margin: auto;
   align-items: baseline;
+}
+.spacing_div {
   margin: 0 5ch;
 }
 .project_name {
